    * Removed the statp method in the SPVM::Sys::IO::Stat class. This logic is moved to the stat method in the Sys class.
    * Removed the lstatp method in the SPVM::Sys::IO::Stat class. This logic is moved to the lstat method in the Sys class.
    * Remvoed the argument of the new method in the Sys::IO::Stat class.
  [New Features]
    * Added the Sys::IO::Windows class.
    * Added the symlinkp method in the Sys::IO: class.
      static method unlinkp : int ($oldpath : string, $newpath : string);
      static method renamep : int ($oldpath : string, $newpath : string);
      static method symlinkp : int ($oldpath : string, $newpath : string);
    * The l method in the Sys::FileTest supports Windows.
    * Added the following methods in the Sys class.
      
      static method is_windows : int ();

      static method A : double ($file : string);

      static method C : double ($file : string);

      static method M : double ($file : string);

      static method O : int ($file : string);

      static method R : int ($file : string);

      static method S : int ($file : string);

      static method W : int ($file : string);

      static method X : int ($file : string);

      static method b : int ($file : string);

      static method c : int ($file : string);

      static method d : int ($file : string);

      static method e : int ($file : string);

      static method f : int ($file : string);

      static method g : int ($file : string);

      static method k : int ($file : string);

      static method l : int ($file : string);

      static method o : int ($file : string);

      static method p : int ($file : string);

      static method r : int ($file : string);

      static method s : long ($file : string);

      static method u : int ($file : string);

      static method w : int ($file : string);

      static method x : int ($file : string);

      static method z : int ($file : string);
      