@@ -4,6 +4,7 @@ class Sys::IO::Stat : pointer {
   use Hash;
   use Sys;
   use Fn;
+  use Sys::IO;
   
   # Class methods
   native static method new : Sys::IO::Stat ();
@@ -71,7 +72,7 @@ class Sys::IO::Stat : pointer {
   method O : int () {
     
     my $ok = 0;
-    if (Sys->defined("_WIN32")) {
+    if (Sys::OS->is_windows) {
       if ($self->st_uid == 0) {
         $ok = 1;
       }
@@ -87,7 +88,7 @@ class Sys::IO::Stat : pointer {
   
   method S : int () {
     my $ok = 0;
-    unless (Sys->defined("_WIN32")) {
+    unless (Sys::OS->is_windows) {
       # Socket
       if (($self->st_mode & IO->S_IFMT) == IO->S_IFSOCK) {
         $ok = 1;
@@ -149,7 +150,7 @@ class Sys::IO::Stat : pointer {
   method g : int () {
     
     my $ok = 0;
-    unless (Sys->defined("_WIN32")) {
+    unless (Sys::OS->is_windows) {
       if ($self->st_mode & IO->S_ISGID) {
         $ok = 1;
       }
@@ -161,7 +162,7 @@ class Sys::IO::Stat : pointer {
   method k : int () {
     
     my $ok = 0;
-    unless (Sys->defined("_WIN32")) {
+    unless (Sys::OS->is_windows) {
       if ($self->st_mode & IO->S_ISVTX) {
         $ok = 1;
       }
@@ -182,7 +183,7 @@ class Sys::IO::Stat : pointer {
   }
   
   method o : int () {
-    if (Sys->defined("_WIN32")) {
+    if (Sys::OS->is_windows) {
       return $self->O;
     }
     
@@ -215,7 +216,7 @@ class Sys::IO::Stat : pointer {
     
     # Character device
     my $ok = 0;
-    unless (Sys->defined("_WIN32")) {
+    unless (Sys::OS->is_windows) {
       if ($self->st_mode & IO->S_ISUID) {
         $ok = 1;
       }
@@ -239,7 +240,7 @@ class Sys::IO::Stat : pointer {
     my $stmode = $self->st_mode;
     
     my $cando = 0;
-    if (Sys->defined("_WIN32")) {
+    if (Sys::OS->is_windows) {
       $cando = !!($mode & $stmode);
     }
     else {
