@@ -11,6 +11,7 @@ use Cwd 'getcwd';
 use SPVM 'TestCase::Sys::FileTest';
 use SPVM 'Sys::FileTest';
 use SPVM 'Sys';
+use SPVM 'Sys::OS';
 
 # Start objects count
 my $start_memory_blocks_count = SPVM::get_memory_blocks_count();
@@ -93,7 +94,7 @@ my $file_myexe_cmd = "t/ftest/myexe.cmd";
   is(!!SPVM::Sys::FileTest->k($file_empty), !!-k $file_empty);
   is(!!SPVM::Sys::FileTest->k($file_bytes8), !!-k $file_bytes8);
 }
-if (SPVM::Sys->defined("_WIN32")) {
+if (SPVM::Sys::OS->is_windows) {
   warn "[Test Output]The tests of lstat is skiped.";
 }
 else {
