@@ -1,5 +1,4 @@
 class TestCase::Sys::Ioctl {
-  use Sys;
   use Sys::Socket;
   use Sys::Socket::Constant as SOCKET;
   use Sys::Socket::Sockaddr;
@@ -8,6 +7,7 @@ class TestCase::Sys::Ioctl {
   use Sys::IO::Constant as IO;
   use Sys::Ioctl;
   use Sys::Ioctl::Constant as IOCTL;
+  use Sys::OS;
   
   use TestUtil::SocketAutoClose;
   
@@ -26,7 +26,7 @@ class TestCase::Sys::Ioctl {
     my $status_ioctl = 0;
     eval { $status_ioctl = Sys::Ioctl->ioctl($socket, IOCTL->FIONBIO, $value); };
     
-    if (Sys->defined("_WIN32")) {
+    if (Sys::OS->is_windows) {
       unless ($status_ioctl == 0) {
         return 0;
       }
